--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 aria-labelledby="offcanvasNavbar2Label">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasNavbar2Label">LPA</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
